--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,6 +1,6 @@
 name: Deploy to GitHub Pages
 
-on: 
+on:
   push:
     branches: [ main ]
 
@@ -8,31 +8,39 @@ permissions:
   contents: read  
   pages: write      
   id-token: write   
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Source  
         uses: actions/checkout@v4
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-            node-version: 20
-      - name: npm installing
+          node-version: '20'
+
+      - name: npm install
         run: npm install
+
       - name: Install Dependencies
         run: npm ci
+
       - name: Set CI Environment Variable
         run: echo "CI=false" >> $GITHUB_ENV
+
       - name: Build Project
-        run: npm run build      
+        run: npm run build
+
       - name: Upload artifacts
-        uses: actions/upload-pages-artifact@v3   
+        uses: actions/upload-pages-artifact@v3
         with:
-           name: 'github-pages'
-           path: build
+          name: 'github-pages-${{ github.sha }}'
+          path: build
+
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
-        with: 
+        with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          artifact_name: 'github-pages'
+          artifact_name: 'github-pages-${{ github.sha }}'
